--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="container">
     <p class="date"></p>
     <div class="clock">
         <div class="hand hour"></div>
@@ -29,6 +30,7 @@
         <div class="number number12">|</div>
         <div class="center-circ"></div>
     </div>
+</div>
 
     <script src="script.js"></script>
 </body>
